--- a/app/web/www/auth/index.html
+++ b/app/web/www/auth/index.html
@@ -3,7 +3,7 @@
 	<div class="ui middle aligned center aligned grid">
         <div class="column login-column">
             <h2 class="ui teal image header">
-                <img src="https://ikt.edu.vn.ua/images/logo.png" class="image">
+                <img src="/static/images/logo.png" class="image">
                 <div class="content">
                     VTL Automation
                 </div>
