--- a/app/web/www/home/index.html
+++ b/app/web/www/home/index.html
@@ -1,16 +1,7 @@
 {% extends 'www/templates/wrapper.html' %}
 {% block body %}
-<div class="ui container">
-        <div class="ui pointing menu">
-            <a class="item">Правила</a>
-            <a class="active item">Пристрої</a>
-            <a class="item">Користувачі</a>
-            <div class="right menu">
-                <div class="item">
-                    <a class="ui blue button icon" href="/auth/logout"><i aria-hidden="true" class="log out icon"></i></a>
-                </div>
-            </div>
-        </div>
+    <div class="ui container">
+        {% include "www/templates/menu.html" %}
         <div class="ui segment">
             <div class="ui grid">
                 <div class="row">
