Add device create page

--- a/app/web/www/devices/index.html
+++ b/app/web/www/devices/index.html
@@ -9,8 +9,11 @@
                     <h2 class="ui header">Header Groups</h2>
                 </div>
                 <div class="right aligned eight wide column">
-                    <button class="ui green button icon"><i aria-hidden="true"
-                            class="calendar plus outline icon"></i></button>
+                    <a href="/devices/new">
+                        <button class="ui green button icon">
+                            <i aria-hidden="true" class="calendar plus outline icon"></i>
+                        </button>
+                    </a>
                 </div>
             </div>
             <div class="row">
