Rename headers on pages

--- a/app/web/www/users/index.html
+++ b/app/web/www/users/index.html
@@ -6,7 +6,7 @@
         <div class="ui grid">
             <div class="row">
                 <div class="eight wide column">
-                    <h2 class="ui header">Users</h2>
+                    <h2 class="ui header">Користувачі</h2>
                 </div>
             </div>
             <div class="row">
