--- a/app/web/www/devices/index.html
+++ b/app/web/www/devices/index.html
@@ -6,7 +6,7 @@
         <div class="ui grid">
             <div class="row">
                 <div class="eight wide column">
-                    <h2 class="ui header">Header Groups</h2>
+                    <h2 class="ui header">Пристрої</h2>
                 </div>
                 <div class="right aligned eight wide column">
                     <a href="/devices/new">
