refactoring & bug fixes

--- a/app/web/www/auth/index.html
+++ b/app/web/www/auth/index.html
@@ -1,4 +1,4 @@
-{% extends 'www/templates/wrapper.html' %}
+{% extends 'templates/wrapper.html' %}
 {% block body %}
 	<div class="ui middle aligned center aligned grid">
         <div class="column login-column">
