--- a/app/web/www/users/index.html
+++ b/app/web/www/users/index.html
@@ -1,7 +1,7 @@
-{% extends 'www/templates/wrapper.html' %}
+{% extends 'templates/wrapper.html' %}
 {% block body %}
 <div class="ui container">
-    {% include "www/templates/menu.html" %}
+    {% include "templates/menu.html" %}
     <div class="ui segment">
         <div class="ui grid">
             <div class="row">
