--- a/app/web/www/devices/index.html
+++ b/app/web/www/devices/index.html
@@ -42,9 +42,9 @@
                                 {% if isAdmin %}
                                 <td>
                                     <div class="ui buttons small">
-                                        <button class="ui yellow button icon">
+                                        <a href="/devices/edit?device_id={{ dev.id }}" class="ui yellow button icon">
                                             <i aria-hidden="true" class="edit icon"></i>
-                                        </button>
+                                        </a>
                                         <a href="/devices/destroy?device_id={{ dev.id }}" class="ui red button icon">
                                             <i aria-hidden="true" class="trash alternate outline icon"></i>
                                         </a>
