--- a/app/web/www/rules/edit.html
+++ b/app/web/www/rules/edit.html
@@ -6,7 +6,7 @@
         <div class="ui grid">
             <div class="row">
                 <div class="column">
-                    <h2 class="ui header">Створення правила</h2>
+                    <h2 class="ui header">Редагування правила</h2>
                 </div>
             </div>
             <div class="row">
