Remove template from home page
resolves: #25

Signed-off-by: Kostiantyn Kostiuk <kostyanf14@live.com>

--- a/app/web/www/home/index.html
+++ b/app/web/www/home/index.html
@@ -1,82 +1,72 @@
 {% extends 'templates/wrapper.html' %}
 {% block body %}
-    <div class="ui container">
-        {% include "templates/menu.html" %}
-        <div class="ui segment">
-            <div class="ui grid">
-                <div class="row">
-                    <div class="eight wide column">
-                        <h2 class="ui header">Header Groups</h2>
-                    </div>
-                    <div class="right aligned eight wide column">
-                        <button class="ui green button icon"><i aria-hidden="true"
-                                class="calendar plus outline icon"></i></button>
-                    </div>
+<div class="ui container">
+    {% include "templates/menu.html" %}
+    <div class="ui segment">
+        <div class="ui grid">
+            <div class="row">
+                <div class="wide column">
+                    <h2 class="ui header">Головна</h2>
                 </div>
-                <div class="row">
-                    <div class="column">
-                        <table class="ui celled striped table">
-                            <thead>
-                                <tr>
-                                    <th class="collapsing">#</th>
-                                    <th>Назва</th>
-                                    <th>Опис</th>
-                                    <th>Тип</th>
-                                    <th>Параметри</th>
-                                    <th class="collapsing"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>
-                                        <div class="ui buttons small">
-                                            <button class="ui yellow button icon"><i aria-hidden="true"
-                                                    class="edit icon"></i></button>
-                                            <button class="ui red button icon"><i aria-hidden="true"
-                                                    class="trash alternate outline icon"></i></button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>
-                                        <div class="ui buttons small">
-                                            <button class="ui red button icon"><i aria-hidden="true"
-                                                    class="trash alternate outline icon"></i></button>
-                                            <button class="ui yellow button icon"><i aria-hidden="true"
-                                                    class="edit icon"></i></button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>
-                                        <div class="ui buttons small">
-                                            <button class="ui yellow button icon"><i aria-hidden="true"
-                                                    class="edit icon"></i></button>
-                                            <button class="ui red button icon"><i aria-hidden="true"
-                                                    class="trash alternate outline icon"></i></button>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="eight wide column">
+                    <p>
+                        Introducing VTL Automation,<br>
+                        Managing rules without hesitation,<br>
+                        Calls to and from lessons in line,<br>
+                        Audio controlled, that's just fine.
+                    </p>
+                    <p>
+                        A minute of silence, anthem, or song,<br>
+                        All set up, it won't take long,<br>
+                        Morning exercises, with music in sync,<br>
+                        VTL Automation, the missing link.
+                    </p>
+                    <p>
+                        It's time to focus and learn with ease,<br>
+                        VTL Automation, the technology to seize,<br>
+                        With calls and audio under control,<br>
+                        Students can concentrate, achieving their goal.
+
+                    </p>
+                    <p>
+                        At Vinnytsia Technical Lyceum,<br>
+                        Efficient management, no more pandemonium,<br>
+                        VTL Automation, the perfect tool,<br>
+                        For a seamless experience, that's just cool!
+                    </p>
+                    <p>Authored-by: ChatGPT</p>
+                </div>
+                <div class="eight wide column">
+                    <p>
+                        Представляєм VTL Automation,<br>
+                        Правила керуєм без коливання,<br>
+                        Дзвінки на уроки відбуваються легко,<br>
+                        Аудіо під контролем, ми впевнені у цьому.
+                    </p>
+                    <p>
+                        Хвилина мовчання, гімн чи пісня,<br>
+                        Завжди налаштовані правильно й швидко,<br>
+                        Ранкові вправи з музикою в такт,<br>
+                        VTL Automation, зв'язок на всі 100 відсотків.
+                    </p>
+                    <p>
+                        Настала пора зосередитися та вчитися легко,<br>
+                        VTL Automation, допомагає вивчати все з польотом,<br>
+                        Дзвінки та аудіо - все під контролем,<br>
+                        Учні можуть зосередитися, досягнувши свій мету.
+                    </p>
+                    <p>
+                        Вінницький технічний ліцей - місце, де немає хаосу,<br>
+                        Ефективне керування, де все під контролем,<br>
+                        VTL Automation - ідеальний інструмент,<br>
+                        Для безшовного досвіду, який просто класний!
+                    </p>
+                    <p>Authored-by: ChatGPT, Translated-by: ChatGPT</p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
