Display end time at rule page
Signed-off-by: Kostiantyn Kostiuk <kostyanf14@live.com>

--- a/app/web/www/rules/index.html
+++ b/app/web/www/rules/index.html
@@ -27,6 +27,7 @@
                                 <th>Пристрій</th>
                                 <th>Початок</th>
                                 <th>Протяжність</th>
+                                <th>Кінець</th>
                                 {% for day in DayOfWeek %}
                                     <th><span class="vertical-text">{{day.to_ukrainian()}}</span></th>
                                 {% endfor %}
@@ -42,6 +43,7 @@
                                 <td>{{ rule.get_device().name }}</td>
                                 <td>{{ rule.get_start_time() }}</td>
                                 <td>{{ rule.get_duration() }}</td>
+                                <td>{{ rule.get_end_time() }}</td>
                                 {% for day in DayOfWeek %}
                                     <td class="center aligned">
                                         <i class="{{ 'check' if day in rule.days_of_week }} square outline icon"></i>
