Rename submit button on rule create/edit page

--- a/app/web/www/rules/form.html
+++ b/app/web/www/rules/form.html
@@ -35,5 +35,5 @@
             </div>
         {% endfor %}
     </div>
-    <button class="ui button" type="submit">Створити</button>
+    <button class="ui button" type="submit">Зберегти</button>
 </form>
