Highlight disabled devices in the list

--- a/app/web/www/devices/index.html
+++ b/app/web/www/devices/index.html
@@ -34,7 +34,7 @@
                         </thead>
                         <tbody>
                             {% for dev in devices %}
-                            <tr>
+                            <tr class="{{ 'error' if dev.disabled }}">
                                 <td>{{ dev.id }}</td>
                                 <td>{{ dev.name }}</td>
                                 <td>{{ dev.description }}</td>
