Use textarea for options for setting multiple

--- a/app/web/www/devices/form.html
+++ b/app/web/www/devices/form.html
@@ -18,7 +18,7 @@
     </div>
     <div class="field">
         <label>Параметри</label>
-        <input type="text" name="options" value="{{device.options if device is defined and device.options}}">
+        <textarea rows="2" name="options">{{device.options if device is defined and device.options}}</textarea>
     </div>
     <div class="field">
         <label>Залежний пристрій</label>
