--- a/app/web/www/rules/form.html
+++ b/app/web/www/rules/form.html
@@ -18,7 +18,7 @@
     </div>
     <div class="field">
         <label>Параметри</label>
-        <input type="text" name="run_options" value="{{rule.run_options if rule is defined and rule.run_options}}">
+        <textarea rows="2" name="run_options">{{rule.run_options if rule is defined and rule.run_options}}</textarea>
     </div>
     <div class="field">
         <label>Час початку</label>
