--- a/app/web/www/rules/form.html
+++ b/app/web/www/rules/form.html
@@ -40,5 +40,12 @@
             </div>
         {% endfor %}
     </div>
+    <div class="inline field">
+        <div class="ui checkbox">
+            <input type="checkbox" name="disabled" value="1" tabindex="0" class="hidden"
+                {{ 'checked' if rule is defined and rule.disabled }}>
+            <label>Вимкнено</label>
+        </div>
+    </div>
     <button class="ui button" type="submit">Зберегти</button>
 </form>
